fixing membership on mobile

--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -103,10 +103,10 @@ h3.block_title {
   select { width: 250px; max-width: 100%; }
 }
 
-@media (max-width: @screen-xs-min) {
-  #memberships .membership {
-    width: 300px;
+@media (max-width: @screen-sm-min) {
+  #memberships .membership .membership_features {
     height: auto;
+    width: 100%;
   }
 }
 form label.required {
